--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "mailing-app",
+  "name": "mailing-app-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Carlos",
   "license": "ISC",
-  "description": "",
+  "description": "API backend para mi aplicación de mailing",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.0",
     "express": "^5.1.0",
     "multer": "^2.0.1",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "path": "^0.12.7"
   }
 }
